desktop layout under progress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <h1 class="heading">Katie Bouman</h1>
     </header>
-    <main class="mx-8 md:mx-auto md:max-w-xl">
+    <main class="mx-8 md:mx-auto md:max-w-xl xl:max-w-4xl">
         <div class="image-box">
             <div class="image-box-border"></div>
             <img class="katie-bouman-image" src="./src/assets/katie-image.png" alt="Katie Bouman Computer scientist">
@@ -34,17 +34,18 @@
         </div>
         <section class="mb-16">
             <p class="blockquote-2 relative">
-                Katherine Louise Bouman a
-                computer scientist who leads
-                the development of algorithm
-                that results to capture first
-                black hole image.
+                10th April 2019 - the first ever image
+                of a supermassive black hole at the
+                centre of Messier 87 is release for public.
+                image was captured by the Event
+                Horizon Telescope a large
+                array of telescope.
             </p>
         </section>
     </main>
     <footer class="footer">
         <div class="links">
-            <p class="text-white font-bold md:text-2xl">Wikipedia</p>
+            <p class="source">Wikipedia</p>
             <div class="connections md:w-auto">
                 <span class="behance">
                     <svg class="fill-current text-white w-6 md:w-10 md:mx-2" xmlns="http://www.w3.org/2000/svg"
