--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 
 <body class="font-body font-medium bg-white text-custom-gray">
     <header class="header">
+        <svg class="hidden xl:block fixed py-4 ml-12" xmlns="http://www.w3.org/2000/svg" width="90" height="164.447" viewBox="0 0 90 164.447">
+            <defs>
+                <style>
+                    .b {
+                        font-size: 30px;
+                        font-family: IkonoMiniL3-3, "Ikono Mini L 3";
+                    }
+
+                    .c {
+                        stroke-linecap: round;
+                        stroke-width: 3px;
+                    }
+
+                    .d {
+                        stroke: none;
+                    }
+                </style>
+            </defs>
+            <g transform="translate(-25.5 -838)">
+                <g class="a fill-current text-transparent" style="stroke: #00ffb1;stroke-width: 2px;" transform="translate(25.5 912.024)">
+                    <circle class="d" cx="45" cy="45" r="45" />
+                    <circle class="e fill-current text-transparent" cx="45" cy="45" r="44" />
+                </g><text class="b fill-current text-cyan-lite" style="stroke: #00ffb1" transform="translate(70.5 1000.447)">
+                    <tspan x="-15.555" y="0"></tspan>
+                </text>
+                <line class="c fill-current text-transparent" style="stroke: #00ffb1" y1="137.287" transform="translate(70.5 839.5)" />
+            </g>
+        </svg>
         <h1 class="heading">Katie Bouman</h1>
     </header>
     <main class="mx-8 md:mx-auto md:max-w-xl xl:max-w-5xl">
@@ -20,7 +48,7 @@
             <div class="image-box-border"></div>
             <img class="katie-bouman-image" src="./src/assets/katie-image.png" alt="Katie Bouman Computer scientist">
         </div>
-        <section class="mb-16">
+        <section class="mb-16 xl:mb-64">
             <p class="blockquote-1 relative">
                 Katherine Louise Bouman a
                 computer scientist who leads
@@ -33,7 +61,7 @@
             <img class="black-hole-image" src="./src/assets/Black_hole.jpg"
                 alt="Supermassive black hole at the center of Messier87 galaxy">
         </div>
-        <section class="mb-16">
+        <section class="mb-16 xl:mb-64">
             <p class="blockquote-2 relative">
                 10th April 2019 - the first ever image
                 of a supermassive black hole at the
