--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body class="font-body font-medium bg-white text-custom-gray">
     <header class="header">
-        <svg class="hidden xl:block fixed py-4 ml-12" xmlns="http://www.w3.org/2000/svg" width="90" height="164.447" viewBox="0 0 90 164.447">
+        <svg class="hidden xl:block fixed py-4 ml-12" xmlns="http://www.w3.org/2000/svg" width="90" height="164.447"
+            viewBox="0 0 90 164.447">
             <defs>
                 <style>
                     .b {
@@ -32,13 +33,16 @@
                 </style>
             </defs>
             <g transform="translate(-25.5 -838)">
-                <g class="a fill-current text-transparent" style="stroke: #00ffb1;stroke-width: 2px;" transform="translate(25.5 912.024)">
+                <g class="a fill-current text-transparent" style="stroke: #00ffb1;stroke-width: 2px;"
+                    transform="translate(25.5 912.024)">
                     <circle class="d" cx="45" cy="45" r="45" />
                     <circle class="e fill-current text-transparent" cx="45" cy="45" r="44" />
-                </g><text class="b fill-current text-cyan-lite" style="stroke: #00ffb1" transform="translate(70.5 1000.447)">
+                </g><text class="b fill-current text-cyan-lite" style="stroke: #00ffb1"
+                    transform="translate(70.5 1000.447)">
                     <tspan x="-15.555" y="0"></tspan>
                 </text>
-                <line class="c fill-current text-transparent" style="stroke: #00ffb1" y1="137.287" transform="translate(70.5 839.5)" />
+                <line class="c fill-current text-transparent" style="stroke: #00ffb1" y1="137.287"
+                    transform="translate(70.5 839.5)" />
             </g>
         </svg>
         <h1 class="heading" id="title">Katie Bouman</h1>
@@ -47,8 +51,10 @@
         <div class="image-box">
             <div class="image-box-border"></div>
             <figure class="katie-bouman-image" id="img-div">
-                <img class="katie-image m-auto" id="image" src="./src/assets/katie-image.png" alt="Katie Bouman Computer scientist">
-                <figcaption class="h-0 opacity-0" id="img-caption">katie bouman CHIRP algorithm designer lead</figcaption>
+                <img class="katie-image m-auto" id="image" src="./src/assets/katie-image.png"
+                    alt="Katie Bouman Computer scientist">
+                <figcaption class="h-0 opacity-0" id="img-caption">katie bouman CHIRP algorithm designer lead
+                </figcaption>
             </figure>
         </div>
         <section class="mb-16 xl:mb-64" id="tribute-info">
@@ -80,7 +86,8 @@
         </div>
         <div class="footer">
             <div class="links">
-                <a href="https://en.wikipedia.org/wiki/Katie_Bouman" target="_blank" class="source" id="tribute-link">Wikipedia</a>
+                <a href="https://en.wikipedia.org/wiki/Katie_Bouman" target="_blank" class="source"
+                    id="tribute-link">Wikipedia</a>
                 <div class="connections md:w-auto">
                     <a href="https://www.behance.net/amarjeetrao" class="behance">
                         <svg class="fill-current text-white w-6 md:w-10 md:mx-2" xmlns="http://www.w3.org/2000/svg"
